--- a/public/less/vibracion/vibracion.less
+++ b/public/less/vibracion/vibracion.less
@@ -1,3 +1,8 @@
-@import "bootstrap.less";
+@import "../../lib/bs/less/bootstrap.less";
 
-// override bs variables here
+// override bs here
+// try to keep the same order as bs
+
+@import "variables.less";
+
+@import "navbar.less";
