adds mixin for btn behaviour

--- a/public/less/vibracion/vibracion.less
+++ b/public/less/vibracion/vibracion.less
@@ -4,5 +4,8 @@
 // try to keep the same order as bs
 
 @import "variables.less";
+@import "mixins.less";
+
+@import "buttons.less";
 
 @import "navbar.less";
