--- a/public/less/vibracion/variables.less
+++ b/public/less/vibracion/variables.less
@@ -1,8 +1,12 @@
 // override bs variables here
 // try to keep the same order as bs
 
+// Brand colors;
+
+@brand-primary:		#777;
+
 // Scaffolding
-@text-color: @gray-darker;
+@text-color:		#000;
 
 // Typography
 
@@ -10,5 +14,18 @@
 @font-family-base:	@font-family-serif;
 
 @font-size-base:	20px;
+@font-size-large:	ceil(@font-size-base * 1.7);
 
 @font-size-h1:		floor(@font-size-base * 3);
+
+
+// Components
+/*
+@border-radius-base:	0;
+@border-radius-large:	0;
+@border-radius-small:	0;
+*/
+
+// Buttons
+
+@btn-primary-color:	#fff;
