--- a/public/css/vibracion.css
+++ b/public/css/vibracion.css
@@ -308,7 +308,7 @@ body {
   font-family: "EB Garamond", Georgia, "Times New Roman", Times, serif;
   font-size: 20px;
   line-height: 1.428571429;
-  color: #222222;
+  color: #000000;
   background-color: #ffffff;
 }
 
@@ -322,13 +322,13 @@ textarea {
 }
 
 a {
-  color: #428bca;
+  color: #777777;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #2a6496;
+  color: #515151;
   text-decoration: underline;
 }
 
@@ -418,11 +418,11 @@ cite {
 }
 
 .text-primary {
-  color: #428bca;
+  color: #777777;
 }
 
 .text-primary:hover {
-  color: #3071a9;
+  color: #5e5e5e;
 }
 
 .text-warning {
@@ -2058,16 +2058,16 @@ textarea.input-sm {
 }
 
 .input-lg {
-  height: 55px;
+  height: 67px;
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 34px;
   line-height: 1.33;
   border-radius: 6px;
 }
 
 select.input-lg {
-  height: 55px;
-  line-height: 55px;
+  height: 67px;
+  line-height: 67px;
 }
 
 textarea.input-lg {
@@ -2163,7 +2163,7 @@ textarea.input-lg {
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: #626262;
+  color: #404040;
 }
 
 @media (min-width: 768px) {
@@ -2329,8 +2329,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #777777;
+  border-color: #6a6a6a;
 }
 
 .btn-primary:hover,
@@ -2339,8 +2339,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #3276b1;
-  border-color: #285e8e;
+  background-color: #636363;
+  border-color: #4c4c4c;
 }
 
 .btn-primary:active,
@@ -2364,8 +2364,8 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #777777;
+  border-color: #6a6a6a;
 }
 
 .btn-warning {
@@ -2534,7 +2534,7 @@ fieldset[disabled] .btn-info.active {
 
 .btn-link {
   font-weight: normal;
-  color: #428bca;
+  color: #777777;
   cursor: pointer;
   border-radius: 0;
 }
@@ -2557,7 +2557,7 @@ fieldset[disabled] .btn-link {
 
 .btn-link:hover,
 .btn-link:focus {
-  color: #2a6496;
+  color: #515151;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -2572,7 +2572,7 @@ fieldset[disabled] .btn-link:focus {
 
 .btn-lg {
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 34px;
   line-height: 1.33;
   border-radius: 6px;
 }
@@ -3529,7 +3529,7 @@ input[type="button"].btn-block {
 .dropdown-menu > .active > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #428bca;
+  background-color: #777777;
   outline: 0;
 }
 
@@ -3750,7 +3750,7 @@ input[type="button"].btn-block {
 
 .btn-group-lg > .btn {
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 34px;
   line-height: 1.33;
   border-radius: 6px;
 }
@@ -3897,9 +3897,9 @@ input[type="button"].btn-block {
 .input-group-lg > .form-control,
 .input-group-lg > .input-group-addon,
 .input-group-lg > .input-group-btn > .btn {
-  height: 55px;
+  height: 67px;
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 34px;
   line-height: 1.33;
   border-radius: 6px;
 }
@@ -3907,8 +3907,8 @@ input[type="button"].btn-block {
 select.input-group-lg > .form-control,
 select.input-group-lg > .input-group-addon,
 select.input-group-lg > .input-group-btn > .btn {
-  height: 55px;
-  line-height: 55px;
+  height: 67px;
+  line-height: 67px;
 }
 
 textarea.input-group-lg > .form-control,
@@ -3979,7 +3979,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .input-group-addon.input-lg {
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 34px;
   border-radius: 6px;
 }
 
@@ -4099,14 +4099,14 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #428bca;
+  border-color: #777777;
 }
 
 .nav .open > a .caret,
 .nav .open > a:hover .caret,
 .nav .open > a:focus .caret {
-  border-top-color: #2a6496;
-  border-bottom-color: #2a6496;
+  border-top-color: #515151;
+  border-bottom-color: #515151;
 }
 
 .nav .nav-divider {
@@ -4218,7 +4218,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #428bca;
+  background-color: #777777;
 }
 
 .nav-pills > li.active > a .caret,
@@ -4301,13 +4301,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .nav .caret {
-  border-top-color: #428bca;
-  border-bottom-color: #428bca;
+  border-top-color: #777777;
+  border-bottom-color: #777777;
 }
 
 .nav a:hover .caret {
-  border-top-color: #2a6496;
-  border-bottom-color: #2a6496;
+  border-top-color: #515151;
+  border-bottom-color: #515151;
 }
 
 .nav-tabs .dropdown-menu {
@@ -4489,7 +4489,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-brand {
   float: left;
   padding: 11px 15px;
-  font-size: 25px;
+  font-size: 34px;
   line-height: 28px;
 }
 
@@ -4988,8 +4988,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   z-index: 2;
   color: #ffffff;
   cursor: default;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #777777;
+  border-color: #777777;
 }
 
 .pagination > .disabled > span,
@@ -5007,7 +5007,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pagination-lg > li > a,
 .pagination-lg > li > span {
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 34px;
 }
 
 .pagination-lg > li:first-child > a,
@@ -5139,12 +5139,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .label-primary {
-  background-color: #428bca;
+  background-color: #777777;
 }
 
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #3071a9;
+  background-color: #5e5e5e;
 }
 
 .label-success {
@@ -5216,7 +5216,7 @@ a.badge:focus {
 
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #428bca;
+  color: #777777;
   background-color: #ffffff;
 }
 
@@ -5287,12 +5287,12 @@ a.list-group-item.active > .badge,
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #428bca;
+  border-color: #777777;
 }
 
 .thumbnail .caption {
   padding: 9px;
-  color: #222222;
+  color: #000000;
 }
 
 .alert {
@@ -5441,7 +5441,7 @@ a.thumbnail.active {
   line-height: 28px;
   color: #ffffff;
   text-align: center;
-  background-color: #428bca;
+  background-color: #777777;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5593,8 +5593,8 @@ a.list-group-item.active:hover,
 a.list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #777777;
+  border-color: #777777;
 }
 
 a.list-group-item.active .list-group-item-heading,
@@ -5606,7 +5606,7 @@ a.list-group-item.active:focus .list-group-item-heading {
 a.list-group-item.active .list-group-item-text,
 a.list-group-item.active:hover .list-group-item-text,
 a.list-group-item.active:focus .list-group-item-text {
-  color: #e1edf7;
+  color: #dddddd;
 }
 
 .list-group-item-heading {
@@ -5811,17 +5811,17 @@ a.list-group-item.active:focus .list-group-item-text {
 }
 
 .panel-primary {
-  border-color: #428bca;
+  border-color: #777777;
 }
 
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #777777;
+  border-color: #777777;
 }
 
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #428bca;
+  border-top-color: #777777;
 }
 
 .panel-primary > .panel-heading > .dropdown .caret {
@@ -5829,7 +5829,7 @@ a.list-group-item.active:focus .list-group-item-text {
 }
 
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #428bca;
+  border-bottom-color: #777777;
 }
 
 .panel-success {
@@ -7095,6 +7095,22 @@ td.visible-print {
   td.hidden-print {
     display: none !important;
   }
+}
+
+/*
+@border-radius-base:	0;
+@border-radius-large:	0;
+@border-radius-small:	0;
+*/
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  color: #ffffff;
+  background-color: #888888;
+  border-color: #6a6a6a, 12%;
 }
 
 .navbar {
