--- a/public/less/vibracion/variables.less
+++ b/public/less/vibracion/variables.less
@@ -3,7 +3,7 @@
 
 // Brand colors;
 
-@brand-primary:		#777;
+@brand-primary:		#DB2727; //bloodish red
 
 // Scaffolding
 @text-color:		#000;
@@ -17,15 +17,3 @@
 @font-size-large:	ceil(@font-size-base * 1.7);
 
 @font-size-h1:		floor(@font-size-base * 3);
-
-
-// Components
-/*
-@border-radius-base:	0;
-@border-radius-large:	0;
-@border-radius-small:	0;
-*/
-
-// Buttons
-
-@btn-primary-color:	#fff;
