--- a/public/css/vibracion.css
+++ b/public/css/vibracion.css
@@ -322,13 +322,13 @@ textarea {
 }
 
 a {
-  color: #777777;
+  color: #db2727;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #515151;
+  color: #9c1a1a;
   text-decoration: underline;
 }
 
@@ -418,11 +418,11 @@ cite {
 }
 
 .text-primary {
-  color: #777777;
+  color: #db2727;
 }
 
 .text-primary:hover {
-  color: #5e5e5e;
+  color: #b11e1e;
 }
 
 .text-warning {
@@ -2329,8 +2329,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #777777;
-  border-color: #6a6a6a;
+  background-color: #db2727;
+  border-color: #c72121;
 }
 
 .btn-primary:hover,
@@ -2339,8 +2339,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #636363;
-  border-color: #4c4c4c;
+  background-color: #ba1f1f;
+  border-color: #931818;
 }
 
 .btn-primary:active,
@@ -2364,8 +2364,8 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #777777;
-  border-color: #6a6a6a;
+  background-color: #db2727;
+  border-color: #c72121;
 }
 
 .btn-warning {
@@ -2534,7 +2534,7 @@ fieldset[disabled] .btn-info.active {
 
 .btn-link {
   font-weight: normal;
-  color: #777777;
+  color: #db2727;
   cursor: pointer;
   border-radius: 0;
 }
@@ -2557,7 +2557,7 @@ fieldset[disabled] .btn-link {
 
 .btn-link:hover,
 .btn-link:focus {
-  color: #515151;
+  color: #9c1a1a;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3529,7 +3529,7 @@ input[type="button"].btn-block {
 .dropdown-menu > .active > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #777777;
+  background-color: #db2727;
   outline: 0;
 }
 
@@ -4099,14 +4099,14 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #777777;
+  border-color: #db2727;
 }
 
 .nav .open > a .caret,
 .nav .open > a:hover .caret,
 .nav .open > a:focus .caret {
-  border-top-color: #515151;
-  border-bottom-color: #515151;
+  border-top-color: #9c1a1a;
+  border-bottom-color: #9c1a1a;
 }
 
 .nav .nav-divider {
@@ -4218,7 +4218,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #777777;
+  background-color: #db2727;
 }
 
 .nav-pills > li.active > a .caret,
@@ -4301,13 +4301,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .nav .caret {
-  border-top-color: #777777;
-  border-bottom-color: #777777;
+  border-top-color: #db2727;
+  border-bottom-color: #db2727;
 }
 
 .nav a:hover .caret {
-  border-top-color: #515151;
-  border-bottom-color: #515151;
+  border-top-color: #9c1a1a;
+  border-bottom-color: #9c1a1a;
 }
 
 .nav-tabs .dropdown-menu {
@@ -4988,8 +4988,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   z-index: 2;
   color: #ffffff;
   cursor: default;
-  background-color: #777777;
-  border-color: #777777;
+  background-color: #db2727;
+  border-color: #db2727;
 }
 
 .pagination > .disabled > span,
@@ -5139,12 +5139,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .label-primary {
-  background-color: #777777;
+  background-color: #db2727;
 }
 
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #5e5e5e;
+  background-color: #b11e1e;
 }
 
 .label-success {
@@ -5216,7 +5216,7 @@ a.badge:focus {
 
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #777777;
+  color: #db2727;
   background-color: #ffffff;
 }
 
@@ -5287,7 +5287,7 @@ a.list-group-item.active > .badge,
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #777777;
+  border-color: #db2727;
 }
 
 .thumbnail .caption {
@@ -5441,7 +5441,7 @@ a.thumbnail.active {
   line-height: 28px;
   color: #ffffff;
   text-align: center;
-  background-color: #777777;
+  background-color: #db2727;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5593,8 +5593,8 @@ a.list-group-item.active:hover,
 a.list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #777777;
-  border-color: #777777;
+  background-color: #db2727;
+  border-color: #db2727;
 }
 
 a.list-group-item.active .list-group-item-heading,
@@ -5606,7 +5606,7 @@ a.list-group-item.active:focus .list-group-item-heading {
 a.list-group-item.active .list-group-item-text,
 a.list-group-item.active:hover .list-group-item-text,
 a.list-group-item.active:focus .list-group-item-text {
-  color: #dddddd;
+  color: #f8d6d6;
 }
 
 .list-group-item-heading {
@@ -5811,17 +5811,17 @@ a.list-group-item.active:focus .list-group-item-text {
 }
 
 .panel-primary {
-  border-color: #777777;
+  border-color: #db2727;
 }
 
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #777777;
-  border-color: #777777;
+  background-color: #db2727;
+  border-color: #db2727;
 }
 
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #777777;
+  border-top-color: #db2727;
 }
 
 .panel-primary > .panel-heading > .dropdown .caret {
@@ -5829,7 +5829,7 @@ a.list-group-item.active:focus .list-group-item-text {
 }
 
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #777777;
+  border-bottom-color: #db2727;
 }
 
 .panel-success {
@@ -7097,20 +7097,14 @@ td.visible-print {
   }
 }
 
-/*
-@border-radius-base:	0;
-@border-radius-large:	0;
-@border-radius-small:	0;
-*/
-
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #ffffff;
-  background-color: #888888;
-  border-color: #6a6a6a, 12%;
+  color: #db2727;
+  background-color: #ffffff;
+  border-color: #c72121, 12%;
 }
 
 .navbar {
