--- a/public/less/4edc2013/variables.less
+++ b/public/less/4edc2013/variables.less
@@ -6,26 +6,22 @@
 @brand-primary:		#777;
 
 // Scaffolding
-@text-color:		#000;
+@body-bg:		#000;
+@text-color:		#fff;
 
 // Typography
 
-@font-family-serif:	"EB Garamond",  Georgia, "Times New Roman", Times, serif;
-@font-family-base:	@font-family-serif;
+@font-family-sans-serif:	"Varela Round", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 @font-size-base:	20px;
 @font-size-large:	ceil(@font-size-base * 1.7);
 
 @font-size-h1:		floor(@font-size-base * 3);
-
-
-// Components
-/*
-@border-radius-base:	0;
-@border-radius-large:	0;
-@border-radius-small:	0;
-*/
+@font-size-h2:		floor(@font-size-base * 1.7);
+@font-size-h3:		floor(@font-size-base * 1.4);
+@font-size-h4:		floor(@font-size-base * 1.3);
+@font-size-h5:		floor(@font-size-base * 1.2);
+@font-size-h6:		floor(@font-size-base * 1.1);
 
 // Buttons
-
 @btn-primary-color:	#fff;
